--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "dev/jusizi",
     "description": "Jusizi",
+    "license": "MIT",
     "autoload": {
         "psr-4": {
             "App\\": "src/"
