--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "php": "8.3",
+        "php": "^8.3",
         "php-di/php-di": "^6.4",
         "firebase/php-jwt": "^6.3",
         "php-amqplib/php-amqplib": "^3.5",
@@ -26,7 +26,7 @@
         "larapack/dd": "^1.1",
         "kreait/firebase-php": "^7.0",
         "google/apiclient": "^2.15.0",
-      "ext-curl": "*"
+        "ext-curl": "*"
     },
     "config": {
         "platform": {
